Sonar: Use Pylint configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.projectVersion=0.2.12
 # This property is optional if sonar.modules is set. 
 sonar.sources=bigboat
 sonar.tests=tests
+sonar.python.pylint_config=.pylintrc
 sonar.python.xunit.reportPath=test-reports/TEST-*.xml
 sonar.python.xunit.skipDetails=true
 sonar.python.coverage.reportPath=coverage.xml
