--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.tests=tests
 sonar.python.pylint_config=.pylintrc
 sonar.python.xunit.reportPath=test-reports/TEST-*.xml
 sonar.python.xunit.skipDetails=true
-sonar.python.coverage.reportPath=coverage.xml
+sonar.python.coverage.reportPaths=coverage.xml
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
